fix table container horizontal scroll

--- a/frontend/styles/components/profiles/area-table.scss
+++ b/frontend/styles/components/profiles/area-table.scss
@@ -134,10 +134,8 @@
       }
     }
 
-    table {
-      @media screen and (max-width: $breakpoint-foundation-small) {
-        overflow-x: auto;
-      }
+    @media screen and (max-width: $breakpoint-foundation-small) {
+      overflow-x: auto;
     }
   }
 }
